--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "Glen Nepomuceno",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.16.2"
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "express": "^4.16.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "webpack": "^1.12.13"
   }
 }
