--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "devDependencies": {
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
+    "webpack": "^1.12.13"
+  },
+  "dependencies": {
     "express": "^4.16.2",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "webpack": "^1.12.13"
+    "react-dom": "^0.14.7"
   }
 }
