--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "webpack": "^1.12.13"
   },
